--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -40,7 +40,7 @@ body {
 }
 
 .overflow-y-none {
-  overflow-y: hidden;
+  overflow-y: hidden !important;
 }
 
 .overflow-none {
